[gd_scene load_steps=2 format=3 uid="uid://du3668e3d13to"]

[ext_resource type="Script" uid="uid://j5646u8fne1s" path="res://00_Game/Scripts/InventorySlot.gd" id="1_fixed"]

[node name="InventorySlot" type="TextureRect"]
custom_minimum_size = Vector2(200, 350)
offset_right = 200.0
offset_bottom = 350.0
mouse_filter = 0
expand_mode = 1
stretch_mode = 5
script = ExtResource("1_fixed")

[node name="SlotRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Border" type="ColorRect" parent="SlotRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SlotRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HeroImage" type="TextureRect" parent="SlotRoot/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
